--- a/client/src/components/LoginView/RegisterForm/RegisterForm.scss
+++ b/client/src/components/LoginView/RegisterForm/RegisterForm.scss
@@ -1,7 +1,7 @@
 @import "../../../scss/global";
 @import "../../../scss/abstracts/mixins";
 
-.login {
+.register {
   @include flexCenter(column);
   max-width: 460px;
   max-height: 360px;
@@ -13,10 +13,6 @@
     @include flexCenter(column);
     text-align: left;
 
-    &__submit {
-
-    }
-
     input {
       margin-left: 15px;
     }
@@ -27,8 +23,10 @@
 
     &__username {
       margin: 20px 0 5px 0;
+      width: 275px;
 
       &__input {
+        float: right;
         outline: none;
         border: none;
         border-bottom: 1px solid $validation-inputs-border;
@@ -40,10 +38,23 @@
     }
 
     &__password {
-      margin: 5px 0 25px 0;
+      margin: 5px 0 5px 0;
+      width: 275px;
 
       &__input {
         outline: none;
+        float: right;
+        border: none;
+        border-bottom: 1px solid $validation-inputs-border;
+        transition: all 0.4s ease-in-out;
+        &:focus {
+          border-bottom: 1px solid $validation-inputs-border-focus;
+        }
+      }
+
+      &__input2 {
+        outline: none;
+        float: right;
         border: none;
         border-bottom: 1px solid $validation-inputs-border;
         transition: all 0.4s ease-in-out;
@@ -53,11 +64,29 @@
       }
     }
 
-    &__password {
-      margin: 5px 0 25px 0;
+    &__name {
+      margin: 5px 0 5px 0;
+      width: 275px;
 
       &__input {
         outline: none;
+        float: right;
+        border: none;
+        border-bottom: 1px solid $validation-inputs-border;
+        transition: all 0.4s ease-in-out;
+        &:focus {
+          border-bottom: 1px solid $validation-inputs-border-focus;
+        }
+      }
+    }
+
+    &__surname {
+      margin: 5px 0 25px 0;
+      width: 275px;
+
+      &__input {
+        outline: none;
+        float: right;
         border: none;
         border-bottom: 1px solid $validation-inputs-border;
         transition: all 0.4s ease-in-out;
