Added chat window with styling and exit button

--- a/client/src/scss/abstracts/_variables.scss
+++ b/client/src/scss/abstracts/_variables.scss
@@ -3,3 +3,13 @@
 $validation-border: #bfbfbf;
 $validation-inputs-border: #ededed;
 $validation-inputs-border-focus: #9b9b9b;
+
+/*Chat Window*/
+$chat-window-border: #bfbfbf;
+$chat-window-background: #edfffc;
+$chat-header-border: #474747;
+$chat-header-background: #d1d1d1;
+$chat-conversation-border: rgba(41, 0, 28, 0.63);
+$chat-conversation-background: #bfbca8;
+$chat-message-background: #bfbfbf;
+$chat-message-border: #bfbfbf;
