Added contact list window to main view with stylesheet

--- a/client/src/scss/abstracts/_variables.scss
+++ b/client/src/scss/abstracts/_variables.scss
@@ -13,3 +13,11 @@ $chat-conversation-border: rgba(41, 0, 28, 0.63);
 $chat-conversation-background: #bfbca8;
 $chat-message-background: #bfbfbf;
 $chat-message-border: #bfbfbf;
+
+/*Contact List*/
+$contact-list-window-border: #bfbfbf;
+$contact-list-window-background: #edfffc;
+$contact-list-header-border: #474747;
+$contact-list-header-background: #d1d1d1;
+$contact-list-list-border: #474747;
+$contact-list-list-background: #d1d1d1;
